# funcmasker-flex

./: .flake8  .gitignore  .snakemake-workflow-catalog.yml  Dockerfile  README.md  README.rst  Singularity  analysis.ipynb  config  pyproject.toml  requirements.txt  resources  setup.py  workflow
.github/workflows/: bump_version.yml  deploy.yml  deploy_docker.yml  test.yml
.tests/bids/: dataset_description.json
.tests/bids/derivatives/manual-masks/: dataset_description.json
config/: .snakebids.yml.swp  snakebids.yml
docs/: conf.py  index.md  index.rst  requirements.txt
docs/getting_started/: installation.md  installation.rst
docs/usage/: app_cli.rst
ext-bin/: README.md  fslswapdim  reg_resample
funcmasker_flex/: pipeline_description.json  run.py
funcmasker_flex/config/: snakebids.yml
funcmasker_flex/example/: 1_apply_mask_funcmasker.sh  2_preprocess_new.sh  ANTs_MoCo.sh
funcmasker_flex/resources/: test_subjects.txt  train_subjects.txt
funcmasker_flex/workflow/: Snakefile
funcmasker_flex/workflow/rules/: common.smk  evaluate.smk  evaluate_rutherford.smk  inference.smk  setup.smk
nnunet_fetal_brain/: run.py
nnunet_fetal_brain/config/: snakebids.yml
nnunet_fetal_brain/resources/: template.json
nnunet_fetal_brain/workflow/: Snakefile
nnunet_fetal_brain/workflow/rules/: common.smk  inference.smk  training.smk
workflow/: Snakefile
workflow/rules/: evaluate.smk  inference.smk  training.smk
workflow/scripts/: create_json.py
